chore: rename project from continy to acephalus and add i18n support
